package edu.fiuba.algo3.modelo;

public class CloseCombatType extends SectionType {
} 