package edu.fiuba.algo3.modelo;

public class SiegeType extends SectionType {
} 