package edu.fiuba.algo3.modelo;

public class SpecialType extends SectionType {
} 